# LLVM_playground

./: .gitignore  README.md  shell.nix
.devcontainer/: Dockerfile  devcontainer.json
task_1/: CMakeLists.txt  README.md  app.c  sim.h
task_1/LLVM_IR/: app.ll
task_2/: CMakeLists.txt  PassTraceInstructions.cpp  README.md  analyze.py
task_2/c_test/: fact.c  start.c
task_3/: LLVM_IRGen_app.cpp  README.md  ir_generator.cpp
task_4/: CMakeLists.txt  README.md  app.s  app_asm_IRgen_1.cpp  app_asm_IRgen_2.cpp
task_5/: CMakeLists.txt  README.md  lexer.l  parser.y  run.sh
task_5/examples/: program.mgl  program_2.mgl  program_3.mgl
